# uh-halp

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  index.html  mkdocs.yml
.github/workflows/: release.yml  unit-tests.yml
docs/: index.md  uh-halp.cast
pydoc/: index.html
scripts/: coverage.sh  docs.sh  install-dev.sh  install.sh  release.sh  update-pre-commit.sh
search/: search_index.json
uh-halp/: README.md  pyproject.toml
uh-halp/src/uh_halp/: __main__.py  config.py  default_config.json  key.py  keys.py  main.py  os.py  query.py  vars.py
uh-halp/src/uh_halp/backend/: openai.py  util.py  web_api.py
uh-halp/tests/: test_nothing.py  test_query.py
uh-halp/tests/backend/: test_clean.py
uh-halp/tests/vars/: test_apply_vars.py  test_get_shell.py
